# templates-cmd

./: .gitignore  pyproject.toml
tplcmd/: base.py  cli.py  render.py  utils.py
tplcmd/commands/: scripts_cmd.py
tplcmd/templates/: example.spec.json  example.txt
tplcmd/templates/scripts/: google_base_startup.sh
