[tool.poetry]
name = "tplcmd"
version = "0.1.0"
description = "A command line tool for templates rendering"
authors = ["Xavier Petit <nuxion@gmail.com>"]
license = "MPL-2.0"

[tool.poetry.scripts]
tplcmd = "tplcmd.cli:cli"

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
click = "^8.1.3"
pydantic = "^1.10.2"
Jinja2 = "^3.1.2"
rich = "^12.6.0"
datamodel-code-generator = "^0.13.1"

[tool.poetry.dev-dependencies]
ipython = ">=7.3.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
